--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -49,7 +49,7 @@ li:last-children {
   left: 0px;
   width: 100%;
 }
-.futter {
+.footer {
   display: flex;
   position: relative;
   bottom: 0;
@@ -58,7 +58,7 @@ li:last-children {
   height: 182px;
   flex-direction: column;
 }
-.futter_text {
+.footer_text {
   text-align: center;
 }
 .futtet_icon {
@@ -68,7 +68,7 @@ li:last-children {
   padding: 30px;
   margin: 0 auto;
 }
-.futter_icon_i {
+.footer_icon_i {
   width: 27px;
   height: 32px;
 }
