--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -2,17 +2,35 @@ body {
   display: flex;
   position: relative;
   flex-direction: column;
+  height: 100%;
+  padding-top: 100px;
 }
 .header {
   display: flex;
-  position: relative;
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  z-index: 50;
   width: 100%;
-  margin: 0 auto;
   justify-content: flex-end;
-  height: 43px;
-  margin-bottom: 50px;
+}
+.header:before {
+  content: '';
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background-color: blueviolet;
+}
+.header_content {
+  max-width: 1180px;
+  margin: 0 auto;
+  padding: 0 10px;
+  display: flex;
 }
 .header_menu {
+  position: relative;
   max-width: 239px;
   font-family: 'Heebo';
   font-size: 20px;
@@ -43,6 +61,11 @@ body {
 a:hover {
   color: #ff6464;
 }
+.menu_body button {
+  list-style: none;
+  border: none;
+  background-color: white;
+}
 .img {
   display: none;
 }
@@ -69,7 +92,7 @@ li:last-children {
   }
   .img {
     display: flex;
-    width: 32px;
-    height: 34px;
+    width: 50px;
+    height: 50px;
   }
 }
