--- a/src/styles/portfolio.css
+++ b/src/styles/portfolio.css
@@ -55,6 +55,9 @@
   width: 243px;
   height: 243px;
 }
+.portfolio_photo img {
+  display: block;
+}
 @media (max-width: 375px) {
   .portfolio {
     text-align: center;
@@ -91,5 +94,6 @@
     height: 180px;
     margin-bottom: 34px;
     border-radius: 60%;
+    margin: 0px 58px 0px 0px;
   }
 }
