--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -1,98 +1,24 @@
-.wrapper {
+.main {
   width: 100%;
   min-width: 100%;
   display: flex;
   flex-direction: column;
-}
-.header_menu {
-  margin: 0px auto;
-}
-.menu_body {
-  color: black;
-  font-size: 14px;
-}
-.menu_list {
-  align-items: center;
-  display: flex;
-  justify-content: flex-end;
-  height: 50px;
-  flex-direction: row;
-}
-li {
-  margin: 0px 0px 0px 33px;
-  list-style-type: none;
-}
-a {
-  text-decoration: none;
-  color: black;
-  transition: color 0.3s ease 0s;
-}
-a:hover {
-  color: #ff6464;
-}
-.img {
-  display: none;
-}
-li:last-children {
-  margin: 0px 0px 0px 0px;
-}
-.menu_link {
-  font-family: 'Heebo';
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 29px;
-  letter-spacing: 0px;
-  text-align: right;
-  transition: color 0.3s ease 0s;
-  top: calc(50% -1 px);
-  left: 0px;
-  width: 100%;
-}
-.footer {
-  display: flex;
-  position: relative;
-  bottom: 0;
-  margin: 0 auto;
-  width: 100%;
-  height: 182px;
-  flex-direction: column;
-}
-.footer_text {
-  text-align: center;
-}
-.futtet_icon {
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  padding: 30px;
-  margin: 0 auto;
-}
-.footer_icon_i {
-  width: 27px;
-  height: 32px;
-}
-.main {
-  width: 607px;
-  margin: 0 auto;
   padding: 0 20px;
-  box-sizing: border-box;
   font-family: 'Heebo', sans-serif;
+  text-align: left;
+  color: #21243d;
 }
-h1 {
-  display: block;
-  box-sizing: border-box;
+
+.main h1 {
   padding: 50px 0px 0px 0px;
   margin: 0px 0px;
-  font-family: 'Heebo';
   font-size: 44px;
-  font-style: normal;
   font-weight: 700;
   line-height: 60px;
-  letter-spacing: 0px;
   text-align: left;
 }
 .main_blog {
+  width: 607px;
   margin: 0px 0px;
   flex-direction: column;
   justify-content: start;
@@ -100,15 +26,15 @@ h1 {
 .main_blog_h {
   padding-top: 40px;
   padding-bottom: 0px;
-  font-family: 'Heebo';
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 11000;
+  font-weight: 110;
   line-height: 55px;
-  letter-spacing: 0px;
-  text-align: left;
+
+  font-style: 'Medium';
+  font-size: 30px;
+  color: #21243d;
 }
-.main_blog_data {
+.main_format {
+  color: #8695a4;
 }
 .main_blog_text {
   box-sizing: border-box;
@@ -116,10 +42,8 @@ h1 {
   border-radius: 'undefinedpx';
   font-family: 'Heebo';
   font-size: 16px;
-  font-style: normal;
   font-weight: 400;
   line-height: 24px;
-  letter-spacing: 0px;
   text-align: left;
 }
 .main_blog_text:last-children {
