--- a/src/styles/HomePages.css
+++ b/src/styles/HomePages.css
@@ -19,3 +19,7 @@
   transform: translateX(-50);
   background-color: blueviolet;
 }
+.homepages_title {
+  text-align: left;
+  margin-left: 25%;
+}
