--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -1,7 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
 .portfolio {
   width: 100%;
   font-family: 'Heebo';
@@ -16,7 +12,6 @@
   margin-bottom: 61px;
   padding-bottom: 9px;
 }
-
 .portfolio_content {
   flex-direction: column;
 }
@@ -63,17 +58,19 @@
     text-align: center;
   }
   .portfolio_biography {
-    max-width: 410px;
+    width: 100%;
     flex-direction: column-reverse;
     justify-content: center;
     align-items: center;
   }
   .portfolio_content {
-    margin-top: 68px;
+    width: 100%;
+    align-items: center;
   }
   .portfolio_name {
-    width: 312px;
-    margin: 0 auto;
+    width: calc(100% - 32px);
+    max-width: 100%;
+    margin: 0 16px;
     font-size: 32px;
     font-weight: 700;
     line-height: 40px;
@@ -82,18 +79,25 @@
     font-size: 16px;
     font-weight: 400;
     line-height: 24px;
-    width: 328px;
-    margin: 0 auto;
+    width: calc(100% - 32px);
+    max-width: 100%;
+    margin: 0 16px;
     margin-top: 68px;
   }
   .portfolio_btn {
     margin-top: 68px;
   }
   .portfolio_photo {
-    width: 174px;
-    height: 180px;
+    width: 100%;
+    height: 75vw;
     margin-bottom: 34px;
     border-radius: 60%;
-    margin: 0px 58px 0px 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .portfolio_photo img {
+    width: 75vw;
+    height: 75vw;
   }
 }
