--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -1,23 +1,44 @@
-.menu_container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 80px;
+.menu {
+  margin: 0;
+  padding: 0;
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
   z-index: 2;
+  height: 100vh;
+  width: 100vw;
+  animation-duration: 0.5s;
+  animation-timing-function: ease-in-out;
+  animation-name: in;
 }
-.header_burger {
-  display: none;
+
+.menu_close {
+  animation-duration: 0.5s;
+  animation-timing-function: ease-in-out;
+  animation-name: out;
+  animation-fill-mode: forwards;
 }
-.header_discreption {
+
+.menu__background {
+  position: absolute;
+  width: 100%;
+  height: 70%;
+  background-color: rgb(24 181 228);
+}
+
+.menu__list {
+  position: relative;
+  top: 50px;
   list-style: none;
-  text-decoration: none;
 }
-.menu_ul {
+
+.menu__item a {
+  font-size: 50px;
+  margin-bottom: 30px;
   text-decoration: none;
-  list-style: none;
-}
-.menu_ul a {
-  text-decoration: none;
+  border: none;
+  outline: none;
   color: black;
   transition: color 0.3s ease 0s;
 }
@@ -25,41 +46,42 @@ a:hover {
   color: #ff6464;
 }
 
-.menu_li {
-  list-style: none;
+.menu__button {
+  position: absolute;
+  right: 30px;
+  top: 30px;
+  width: 50px;
+  height: 50px;
+  background-color: transparent;
+  border: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
-@media (max-width: 410px) {
-  .header_burger {
-    border: none;
-    background-color: white;
-    width: 300px;
-    margin: 0 auto;
-    display: flex;
-    position: relative;
-    flex-direction: row;
-    color: black;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 42px;
-    font-weight: 200%;
-    left: 90%;
-    transform: translateX(-15%);
-    bottom: 211%;
-    box-sizing: border-box;
+
+.menu__cross {
+  position: relative;
+  display: block;
+  font-size: 70px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+@keyframes in {
+  0% {
+    transform: translateX(100%);
   }
-  .header_discreption {
-    margin-top: -40%;
-    margin-left: -50%;
-    font-size: 38px;
-    font-weight: 200%;
+  100% {
+    transform: translateX(0);
   }
-  .header_burger button {
-    border: none;
-    background-color: white;
+}
+
+@keyframes out {
+  0% {
+    transform: translateX(0);
   }
-  .menu_content {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    max-width: 410px;
+  100% {
+    transform: translateX(100%);
   }
 }
