--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -1,6 +1,5 @@
 .main {
   width: 100%;
-  min-width: 100%;
   display: flex;
   position: relative;
   flex-direction: column;
@@ -8,7 +7,7 @@
   font-family: 'Heebo', sans-serif;
   text-align: left;
   color: #21243d;
-  left: 75%;
+  left: 50%;
   transform: translateX(-50%);
 }
 
@@ -21,7 +20,7 @@
   text-align: left;
 }
 .main_blog {
-  width: 607px;
+  max-width: 681px;
   margin: 0px 0px;
   flex-direction: column;
   justify-content: start;
@@ -37,6 +36,11 @@
   font-size: 30px;
   color: #21243d;
 }
+.main_blog_data {
+  /* padding-right: 31px;
+  border-right: 1px solid #000; */
+}
+
 .main_format {
   color: #8695a4;
 }
@@ -62,8 +66,9 @@
     font-size: 30px;
   }
   .main_blog {
-    width: 339px;
-    margin: 0px 0px;
+    max-width: 100%;
+    padding-bottom: 30%;
+    margin-bottom: 5%;
   }
   .main_blog_title {
     padding-top: 20px;
