--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,21 +3,21 @@
   position: relative;
   bottom: 0;
   margin: 0 auto;
-  width: 100%;
-  height: 182px;
+  max-width: 100%;
+  max-height: 182px;
   flex-direction: column;
   margin-top: 113px;
   margin-right: -3px;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
 }
 .footer_text {
-  text-align: center;
+  margin-top: 30px;
 }
 .footer_icon {
   flex-direction: row;
-  justify-content: center;
-  align-items: center;
   padding: 30px;
-  margin: 0 auto;
 }
 .footer_icon_i {
   margin-left: 30px;
