--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -22,11 +22,19 @@
 
 .menu__background {
   position: absolute;
-  width: 100%;
-  height: 70%;
+  width: 100vw;
+  height: 100vh;
   background-color: rgb(24 181 228);
+  flex-direction: column;
+  justify-content: space-between;
 }
-
+.background_footer {
+  position: absolute;
+  margin-bottom: 0px;
+  bottom: 0px;
+  left: 50%;
+  transform: translateX(-50%);
+}
 .menu__list {
   position: relative;
   top: 50px;
