--- a/src/components/PersonaWork/PersonaWork.css
+++ b/src/components/PersonaWork/PersonaWork.css
@@ -1,23 +1,35 @@
+.personaWork {
+}
 .persona_content {
   display: flex;
   position: relative;
-  margin: 0 auto;
-  align-items: center;
+  flex-direction: column;
+  max-width: 100%;
+  padding: 0px 20px;
+  max-width: 850px;
+  text-align: left;
+  max-width: 100vw;
+  display: flex;
+  position: relative;
   font-family: 'Heebo';
   color: #21243d;
   flex-direction: column;
 }
 .persona_title {
-  font-size: 34px;
   font-weight: 700;
-  line-height: 50px;
-  letter-spacing: 0px;
   color: rgba(33, 36, 61, 1);
-  margin-bottom: 14px;
-  max-width: 52%;
+  margin-bottom: 30px;
+  max-width: 100%;
+  font-size: 180%;
+  line-height: 163%;
+  font-weight: bold;
 }
+
 .work_content_data {
-  margin: 30px 0px 0px -58px;
+  display: flex;
+  position: relative;
+  flex-direction: row;
+  margin-bottom: 24px;
 }
 .data {
   border-radius: 16px;
@@ -44,6 +56,7 @@
   line-height: 24px;
   text-align: left;
   max-width: 75%;
+  margin-bottom: 46px;
 }
 .persona_img {
   max-width: 80%;
@@ -68,24 +81,26 @@
   margin: 18px 4px;
 }
 .work_img-between {
-  box-sizing: border-box;
-  width: 681px;
-  height: 460px;
   margin: 34px 0px auto;
 }
 .work_img-futter {
-  box-sizing: border-box;
-  width: 681px;
-  height: 460px;
   margin: 27px 0px auto;
 }
-.personaWork {
-  display: flex;
-  position: relative;
-  flex-direction: column;
-  max-width: 100%;
-  left: 50%;
-  transform: translateX(-50%);
-  padding: 0px;
-  margin: 0 10px;
+
+@media (max-width: 460px) {
+  .persona_text {
+    font-size: 12px;
+    font-weight: 300;
+    line-height: 20px;
+    margin-bottom: 24px;
+  }
+  .persona_title {
+    font-weight: 700;
+    color: rgba(33, 36, 61, 1);
+    margin-bottom: 14px;
+    max-width: 339px;
+    font-size: 130%;
+    line-height: 133%;
+    font-weight: bold;
+  }
 }
