--- a/src/components/Public/Public.css
+++ b/src/components/Public/Public.css
@@ -27,17 +27,19 @@
   display: flex;
   flex-direction: row;
   font-size: 30px;
-  font-style: normal;
   font-weight: 700;
   line-height: 44px;
-  letter-spacing: 0px;
   text-align: left;
   padding-bottom: 30px;
   border-bottom: solid 1px #e0e0e0;
+  margin: 0 auto;
 }
 .works_imge {
   display: block;
   box-sizing: border-box;
+}
+
+.works_imge img {
 }
 .works_content {
   margin-left: 24px;
@@ -94,7 +96,7 @@
 }
 
 .works_description {
-  width: 594px;
+  max-width: 594px;
   font-family: 'Heebo';
   font-size: 16px;
   font-weight: 400;
@@ -123,16 +125,16 @@
   }
 }
 @media (max-width: 410px) {
-  . .work_featured {
-    width: 410px;
-    margin-left: 10%;
-    margin-right: 10%;
+  .work_featured {
+    max-width: 100vw;
+    margin-left: 5%;
   }
   .works_header {
     justify-content: center;
   }
   .works_content {
     max-width: 100%;
+    margin-left: 0px;
   }
   .works_container {
     width: 327px;
@@ -142,7 +144,7 @@
   }
   .works_imge img {
     display: block;
-    width: 75vw;
+    width: 80%;
   }
 
   .works_title {
