--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -1,5 +1,5 @@
 .main {
-  width: 100%;
+  max-width: 100vw;
   display: flex;
   position: relative;
   flex-direction: column;
@@ -35,6 +35,8 @@
   font-style: 'Medium';
   font-size: 30px;
   color: #21243d;
+  font-family: 'Heebo';
+  font-weight: 500;
 }
 .main_blog_data {
   /* padding-right: 31px;
@@ -59,7 +61,7 @@
   padding-top: 0px;
   padding-bottom: 50px;
 }
-@media (max-width: 410px) {
+@media (max-width: 810px) {
   .main h1 {
     padding: 0px 0px 0px 0px;
     margin: 0px 0px;
@@ -67,13 +69,16 @@
   }
   .main_blog {
     max-width: 100%;
-    padding-bottom: 30%;
-    margin-bottom: 5%;
+    padding-bottom: 26%;
+    margin-bottom: 4%;
+  }
+  .main_blog:last-child {
+    margin-bottom: 30px;
   }
   .main_blog_title {
     padding-top: 20px;
     font-weight: 90;
-    line-height: 37px;
+    line-height: 44px;
     font-size: 23px;
   }
   .main_format {
@@ -81,7 +86,6 @@
   }
   .main_blog_text {
     box-sizing: border-box;
-    height: 43px;
     border-radius: 'undefinedpx';
     font-family: 'Heebo';
     font-size: 16px;
@@ -93,5 +97,18 @@
     margin: 0px 0px 0px 0px;
     padding-top: 0px;
     padding-bottom: 50px;
+  }
+}
+@media (max-width: 450px) {
+  .main_blog_title {
+    padding-top: 20px;
+    font-weight: 90;
+    line-height: 37px;
+    font-size: 23px;
+  }
+  .main_blog {
+    max-width: 100%;
+    padding-bottom: 40%;
+    margin-bottom: 5%;
   }
 }
