--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -1,12 +1,12 @@
 .portfolio {
-  width: 100%;
+  max-width: cals(100vw - 40px);
   font-family: 'Heebo';
   text-align: left;
 }
 .portfolio_biography {
   display: flex;
   position: relative;
-  width: 850px;
+  max-width: calc(100%-32px);
   left: 50%;
   transform: translateX(-50%);
   margin-bottom: 61px;
@@ -19,14 +19,17 @@
   font-size: 44px;
   font-weight: 700;
   line-height: 60px;
-  width: 506px;
   margin-bottom: 40px;
+}
+.portfolio_name p {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 20px;
 }
 .portfolio_description {
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
-  width: 437px;
   margin-bottom: 47px;
 }
 .portfolio_btn {
@@ -52,6 +55,31 @@
 }
 .portfolio_photo img {
   display: block;
+}
+@media (max-width: 850px) {
+  .portfolio_biography {
+    max-width: calc(100%-32px);
+    margin-bottom: 20px;
+    padding-bottom: 9px;
+  }
+  .portfolio {
+    padding: 0 20px;
+  }
+
+  .portfolio_name {
+    font-size: 34px;
+    font-weight: 700;
+    line-height: 40px;
+    margin-bottom: 40px;
+  }
+  .portfolio_foto {
+    margin-left: -15%;
+    margin-right: 5%;
+  }
+  .portfolio_content {
+    max-width: 70%;
+    align-items: center;
+  }
 }
 @media (max-width: 410px) {
   .portfolio {
@@ -79,10 +107,7 @@
     font-size: 16px;
     font-weight: 400;
     line-height: 24px;
-    width: calc(100% - 32px);
-    max-width: 100%;
-    margin: 0 16px;
-    margin-top: 68px;
+    margin: 60px 15px 0px 15px;
   }
   .portfolio_btn {
     margin-top: 68px;
@@ -95,6 +120,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-left: 0px;
   }
   .portfolio_photo img {
     width: 75vw;
