--- a/src/components/Public/Public.css
+++ b/src/components/Public/Public.css
@@ -22,6 +22,7 @@
   font-size: 22px;
   line-height: 60px;
   margin-top: -50px;
+  margin-left: 15px;
 }
 .works_container {
   display: flex;
@@ -109,10 +110,10 @@
     max-width: 45%;
   }
   a.works_menu_link {
-    font-size: 22px;
-    font-weight: 500;
+    font-size: 18px;
+    font-weight: 400;
     text-align: left;
-    line-height: 38px;
+    line-height: 30px;
     font-weight: bold;
     padding: 0;
   }
